# OS2021Project

./: CMakeLists.txt  Cloth.cpp  Cloth.h  Family.cpp  Family.h  Member.cpp  Member.h  README  README.md  Readme.txt  UnitTests.cpp  UnitTests.h  WardRobe.cpp  WardRobe.h  main.cpp  main.h  operations.cpp  operations.h  randomString.cpp  testCloths.cpp  testCloths.h  testFamily.cpp  testFamily.h
gui/: mainWindows.ui  mainwindows.cpp  mainwindows.h
headersFiles/: Cloth.h  Family.h  Member.h  WardRobe.h  main.h  randomString.h
sourcesFiles/: Cloth.cpp  Family.cpp  Member.cpp  WardRobe.cpp  randomString.cpp
unitTests/: UnitTests.cpp  UnitTests.h
